Fixed 2px jumping in SelectionCheckboxColumn

--- a/java/com.sap.sailing.gwt.ui/src/main/java/com/sap/sailing/gwt/ui/leaderboard/LeaderboardTable.css
+++ b/java/com.sap.sailing.gwt.ui/src/main/java/com/sap/sailing/gwt/ui/leaderboard/LeaderboardTable.css
@@ -68,7 +68,7 @@
 }
 
 .cellTableCheckboxSelected {
-	margin-left: 0px; /* account for the selection border that pushes a selected checkbox to the side */
+	margin-left: 2px; 
 	margin-top: 0px;
 	margin-bottom: 0px;
 	margin-right: 2px;
